<?php
/**
 * Created by PhpStorm.
 * User: adam
 * Date: 6/17/15
 * Time: 5:26 PM
 */

namespace Tasks\Actions;


interface Instruction 
{
public function getText();
}