<?php
/**
 * Created by PhpStorm.
 * User: adam
 * Date: 6/17/15
 * Time: 5:32 PM
 */

namespace Tasks;


class Record 
{

}